hphp/test/zend/good/ext/standard/tests/class_object/method_exists_variation_002.php.expectf
*** Testing method_exists() : usage variations ***

Arg value 0

Warning: method_exists() expects parameter 2 to be string, integer given in %s/method_exists_variation_002.php on line 66

Arg value 1

Warning: method_exists() expects parameter 2 to be string, integer given in %s/method_exists_variation_002.php on line 66

Arg value 12345

Warning: method_exists() expects parameter 2 to be string, integer given in %s/method_exists_variation_002.php on line 66

Arg value -2345

Warning: method_exists() expects parameter 2 to be string, integer given in %s/method_exists_variation_002.php on line 66

Arg value 10.5

Warning: method_exists() expects parameter 2 to be string, double given in %s/method_exists_variation_002.php on line 66

Arg value -10.5

Warning: method_exists() expects parameter 2 to be string, double given in %s/method_exists_variation_002.php on line 66

Arg value 101234567000

Warning: method_exists() expects parameter 2 to be string, double given in %s/method_exists_variation_002.php on line 66

Arg value 1.07654321E-9

Warning: method_exists() expects parameter 2 to be string, double given in %s/method_exists_variation_002.php on line 66

Arg value 0.5

Warning: method_exists() expects parameter 2 to be string, double given in %s/method_exists_variation_002.php on line 66

Arg value 

Warning: method_exists() expects parameter 2 to be string, null given in %s/method_exists_variation_002.php on line 66

Arg value 

Warning: method_exists() expects parameter 2 to be string, null given in %s/method_exists_variation_002.php on line 66

Arg value 1

Warning: method_exists() expects parameter 2 to be string, boolean given in %s/method_exists_variation_002.php on line 66

Arg value 

Warning: method_exists() expects parameter 2 to be string, boolean given in %s/method_exists_variation_002.php on line 66

Arg value 1

Warning: method_exists() expects parameter 2 to be string, boolean given in %s/method_exists_variation_002.php on line 66

Arg value 

Warning: method_exists() expects parameter 2 to be string, boolean given in %s/method_exists_variation_002.php on line 66

Arg value 
bool(false)

Arg value 
bool(false)
Error: 4096 - Object of class stdClass could not be converted to string, %s/method_exists_variation_002.php(65)

Arg value 

Warning: method_exists() expects parameter 2 to be string, object given in %s/method_exists_variation_002.php on line 66
Done
